sending the project completed

--- a/index.html
+++ b/index.html
@@ -15,129 +15,130 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
-            <div class="logo">
-                <img 
-                class="header__icon"
-                src="./images/Vector.svg" 
-                alt="cuadro azul redondeado"
-                >
-                <img class="header__icon__line-horizontal" 
-                src="./images/Vector horizontal.svg" 
-                alt="linea horizontal del icono"
-                >
+            <div class="header__logo">
+                <div class="header__vectors">
+                    <img 
+                    class="header__icon"
+                    src="./images/Vector.svg" 
+                    alt="cuadro azul redondeado"
+                    >
+                    <img class="header__icon__line-horizontal" 
+                    src="./images/Vector horizontal.svg" 
+                    alt="linea horizontal del icono"
+                    >
 
-                <img class="header__icon__line-vertical" 
-                src="./images/Vector vertical.svg" 
-                alt="linea vertical del icono"
-                >
+                    <img class="header__icon__line-vertical" 
+                    src="./images/Vector vertical.svg" 
+                    alt="linea vertical del icono"
+                    >
+                </div>
+
+                <div class="header__letras">
+                    <div class="header__letras__practicum">
+                        <img  class="header__letras__practicum-item"
+                        src="./images/letra-P.svg" 
+                        alt=""
+                        >
+
+                        <img  class="header__letras__practicum-item"
+                        src="./images/letra-R.svg" 
+                        alt=""
+                        >
+
+                        <img  class="header__letras__practicum-item"
+                        src="./images/letra-A.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item" 
+                        src="./images/letra-C.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item" 
+                        src="./images/letra-T.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item" 
+                        src="./images/letra-I.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item" 
+                        src="./images/letra-C.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item"
+                        src="./images/letra-U.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__practicum-item" 
+                        src="./images/letra-M.svg" 
+                        alt=""
+                        >
+                    </div>
+
+                    <div class="header__letras__art">
+                        <img class="header__letras__art-item" 
+                        src="./images/letra-A.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__art-item" 
+                        src="./images/letra-R.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__art-item"  
+                        src="./images/letra-T.svg" 
+                        alt=""
+                        >
+                    </div>
+
+                    <div class="header__letras__gallery" >
+                        <img class="header__letras__gallery-item"  
+                        src="./images/letra-G.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item"  
+                        src="./images/letra-A.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item"  
+                        src="./images/letra-L.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item" 
+                        src="./images/letra-L.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item"  
+                        src="./images/letra-E.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item"  
+                        src="./images/letra-R.svg" 
+                        alt=""
+                        >
+
+                        <img class="header__letras__gallery-item" 
+                        src="./images/letra-Y.svg" 
+                        alt=""
+                        >
+                    </div>
+                </div>
             </div>
-
-            <div class="header__letras">
-                <div class="header__letras__practicum">
-                    <img  class="header__letras__practicum-item"
-                    src="./images/letra-P.svg" 
-                    alt=""
-                    >
-
-                    <img  class="header__letras__practicum-item"
-                    src="./images/letra-R.svg" 
-                    alt=""
-                    >
-
-                    <img  class="header__letras__practicum-item"
-                    src="./images/letra-A.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item" 
-                    src="./images/letra-C.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item" 
-                    src="./images/letra-T.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item" 
-                    src="./images/letra-I.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item" 
-                    src="./images/letra-C.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item"
-                    src="./images/letra-U.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__practicum-item" 
-                    src="./images/letra-M.svg" 
-                    alt=""
-                    >
-                </div>
-
-                <div class="header__letras__art">
-                    <img class="header__letras__art-item" 
-                    src="./images/letra-A.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__art-item" 
-                    src="./images/letra-R.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__art-item"  
-                    src="./images/letra-T.svg" 
-                    alt=""
-                    >
-                </div>
-
-                <div class="header__letras__gallery" >
-                    <img class="header__letras__gallery-item"  
-                    src="./images/letra-G.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item"  
-                    src="./images/letra-A.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item"  
-                    src="./images/letra-L.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item" 
-                    src="./images/letra-L.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item"  
-                    src="./images/letra-E.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item"  
-                    src="./images/letra-R.svg" 
-                    alt=""
-                    >
-
-                    <img class="header__letras__gallery-item" 
-                    src="./images/letra-Y.svg" 
-                    alt=""
-                    >
-                </div>
-            </div>
-        
         </header>
 
         <main class="content">
@@ -154,13 +155,14 @@
         
 
             <section class="intro">
-                <p class="intro__title">Conoce un poco mejor los lugares de 
-                    <br>los que proceden tus colegas en línea</p>
-                <p class="intro__quote"> Todo ser humano es un artista, un ser de la libertad, llamado a 
-                    participar en la transformación y reforma de las condiciones, el 
-                    pensamiento y las estructuras que conforman e influyen en 
-                    nuestras vidas.</p>
-                <p class="intro__quote intro__quote__autor">— Joseph Beuys</p>
+                <p class="intro__title">Conoce un poco mejor los lugares de los que proceden tus colegas en línea</p>
+                <div class="intro__quote">
+                    <p class="intro__quote__paragraph"> Todo ser humano es un artista, un ser de la libertad, llamado a 
+                        participar en la transformación y reforma de las condiciones, el 
+                        pensamiento y las estructuras que conforman e influyen en 
+                        nuestras vidas.</p>
+                    <p class="intro__quote__autor">— Joseph Beuys</p>
+                </div>
                 <p class="intro__paragraph">La ciudad de Practicum ha reunido a profesionales de diferentes rincones del mundo. Hoy, la Galería de Arte Practicum se enorgullece de presentar historias y fotografías de algunas de las personas que dedican su tiempo y esfuerzo a hacer que los futuros profesionales de la tecnología de esta ciudad se sientan como en casa. Cada uno de nosotros tiene una historia única sobre el lugar del que procede. No dudes en añadir a nuestra colección tu propia historia y una obra de arte visual dedicada a tu ciudad natal. No importa de dónde seas, nos alegra que seas nuestro vecino.</p>
             </section>
 
@@ -210,10 +212,10 @@
 
             <section class="places">
                 <div class="places__item">
-                    <p class="places__title">Kiev, <br> Ucrania</p>
+                    <p class="places__title">Kiev, Ucrania</p>
                     <img 
                     class="places__image" 
-                    src="./images/__item-4.jpg" 
+                    src="./images/Ucrania.jpg" 
                     alt=""
                     >
                     <p class="places__artist">ARTISTA</p>
@@ -228,7 +230,7 @@
                     <p class="places__title">Criccieth, Gales</p>
                     <img 
                     class="places__image" 
-                    src="./images/__item-2.jpg" 
+                    src="./images/Gales.jpg" 
                     alt=""
                     >
                     <p class="places__artist">ARTISTAS</p>
@@ -277,19 +279,22 @@
                     <p class="places__title">Simití</p>
                     <img 
                     class="places__image" 
-                    src="./images/Burundi.jpg" 
+                    src="./images/SIMITI.jpeg" 
                     alt=""
                     >
                     <p class="places__artist">ARTISTA</p>
                     <p class="places__artist__name">Nicolle Algarín</p>
-                    <p class="places__paragraph">Simití es
-                       BLA BLA BLA BLA</p>
+                    <p class="places__paragraph">Simití es un pequeño municipio ubicado en el departamento de Bolívar, región costera de Colombia
+                        es mucho más antiguo que la capital pero ha sido golpeado por la injusticia y parte de la historia de guerra del país, sin embargo,
+                    es un lugar muy tranquilo, una península rodeada de 3 islas.
+                    <br>Allí se puede hacer avistamiento de aves, bañarse en la ciénaga que la rodea y pasar un rato muy agradable en familia caminando por sus calles y disfrutando de su cálida y fiestera cultura
+                    </p>
                     <button class="places__button" type="button">Compra esta obra de arte como NFT</button>
                 </div>
             </section>
 
             <section class="cover">
-                <div class="opacity"></div>
+                <img class="cover__image" src="./images/Paisaje.jpg" alt="">
                 <div class="cover__content">
                     <p class="cover__title">Visítanos</p>
                     <p class="cover__paragraph">Todo el año
