--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
                     <p class="places__paragraph">Simití es un pequeño municipio ubicado en el departamento de Bolívar, región costera de Colombia
                         es mucho más antiguo que la capital pero ha sido golpeado por la injusticia y parte de la historia de guerra del país, sin embargo,
                     es un lugar muy tranquilo, una península rodeada de 3 islas.
-                    <br>Allí se puede hacer avistamiento de aves, bañarse en la ciénaga que la rodea y pasar un rato muy agradable en familia caminando por sus calles y disfrutando de su cálida y fiestera cultura
+                    <br>
+                    <br>
+                    Allí se puede hacer avistamiento de aves, bañarse en la ciénaga que la rodea y pasar un rato muy agradable en familia caminando por sus calles y disfrutando de su cálida y fiestera cultura
                     </p>
                     <button class="places__button" type="button">Compra esta obra de arte como NFT</button>
                 </div>
