--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
                     alt="cuadro azul redondeado"
                     >
                     <img class="header__icon__line-horizontal" 
-                    src="./images/Vector horizontal.svg" 
+                    src="./images/Vector-horizontal.svg" 
                     alt="linea horizontal del icono"
                     >
 
                     <img class="header__icon__line-vertical" 
-                    src="./images/Vector vertical.svg" 
+                    src="./images/Vector-vertical.svg" 
                     alt="linea vertical del icono"
                     >
                 </div>
 
                 <div class="header__letras">
                     <div class="header__letras__practicum">
+
+                            <svg >
+
+                            </svg>
+
                         <img  class="header__letras__practicum-item"
                         src="./images/letra-P.svg" 
                         alt=""
@@ -148,7 +153,7 @@
                     <br> patria</h1>
                 <p class="lead__subtitle">Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania</p>
                 <img class="lead__image" 
-                    src="./images/kalegin-michail-179870-unsplash (1).jpg"
+                    src="./images/kalegin-michail-179870-unsplash.jpg"
                     alt= "imagen de un paisaje"
                 >
             </section>
