--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <meta name="author" content="Nicolle Algarin" />
     <!-- <meta name="description" content=""> -->
     <title>De patria a patria</title>
-    <!-- <link rel="shortcut icon" href="./favicon.ico" > -->
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
@@ -46,8 +45,6 @@
 
           <div class="header__letras">
             <div class="header__letras__practicum">
-              <svg></svg>
-
               <img
                 class="header__letras__practicum-item"
                 src="./images/letra-P.svg"
@@ -232,22 +229,28 @@
             <p class="places__artist__name">
               Natalia Dolgushina, productora de contenidos
             </p>
-            <p class="places__paragraph">
-              Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
-              orillas del río Dniéper. Por supuesto, nadie en su sano juicio se
-              bañaría en el río, a menos que se haya criado aquí, en cuyo caso
-              probablemente lo haya intentado en algún momento. Los veranos son
-              calurosos aquí, y los inviernos con fuertes corrientes de aire,
-              pero el otoño y la primavera son absolutamente increíbles.
-              <br /><br />
-              La ciudad en sí es una mezcla de arquitectura prerrevolucionaria,
-              de posguerra y soviética, toda ella salpicada de balcones
-              modificados. Si te encuentras en la orilla derecha del Dniéper, el
-              paisaje es difícil de atravesar para las personas en bicicleta y
-              las que llevan tacones. Sin embargo, la orilla izquierda es
-              considerada mucho menos interesante y prestigiosa, incluso por la
-              gente que vive en las afueras de la derecha.
-            </p>
+            <div class="places__paragraph">
+              <p class="places__paragraph__edit">
+                Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada
+                a orillas del río Dniéper. Por supuesto, nadie en su sano juicio
+                se bañaría en el río, a menos que se haya criado aquí, en cuyo
+                caso probablemente lo haya intentado en algún momento. Los
+                veranos son calurosos aquí, y los inviernos con fuertes
+                corrientes de aire, pero el otoño y la primavera son
+                absolutamente increíbles.
+              </p>
+
+              <p class="places__paragraph__edit">
+                La ciudad en sí es una mezcla de arquitectura
+                prerrevolucionaria, de posguerra y soviética, toda ella
+                salpicada de balcones modificados. Si te encuentras en la orilla
+                derecha del Dniéper, el paisaje es difícil de atravesar para las
+                personas en bicicleta y las que llevan tacones. Sin embargo, la
+                orilla izquierda es considerada mucho menos interesante y
+                prestigiosa, incluso por la gente que vive en las afueras de la
+                derecha.
+              </p>
+            </div>
             <button class="places__button" type="button">
               Compra esta obra de arte como NFT
             </button>
@@ -261,22 +264,28 @@
               Steffan Warren, editor principal <br />Kseniya Glagoleva,
               directora del proyecto
             </p>
-            <p class="places__paragraph">
-              La ruina medieval del castillo de Criccieth domina la ciudad desde
-              una roca que se adentra en el mar. Se cree que fue construido por
-              Llewelyn el Grande en el siglo XIII. Unos 900 años después, la
-              autodenominada *Perla de Gales a orillas de Snowdonia* se ha
-              convertido en un popular destino turístico durante los meses de
-              verano. <br /><br /><br />
-              A poca distancia del castillo, se puede disfrutar del mejor helado
-              del mundo en Cadwalader's, cuyo ingrediente secreto se rumorea que
-              son las algas de la zona. Otro reclamo a la fama es el hecho de
-              que Criccieth ganó el premio *Wales in Bloom* durante cinco años
-              consecutivos por sus espectaculares exhibiciones florales
-              alrededor de la ciudad. También fue el hogar de David Lloyd
-              George, el único galés que ocupó el cargo de Primer Ministro del
-              Reino Unido.
-            </p>
+            <div class="places__paragraph">
+              <p class="places__paragraph__edit">
+                La ruina medieval del castillo de Criccieth domina la ciudad
+                desde una roca que se adentra en el mar. Se cree que fue
+                construido por Llewelyn el Grande en el siglo XIII. Unos 900
+                años después, la autodenominada *Perla de Gales a orillas de
+                Snowdonia* se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+
+              <p class="places__paragraph__edit">
+                A poca distancia del castillo, se puede disfrutar del mejor
+                helado del mundo en Cadwalader's, cuyo ingrediente secreto se
+                rumorea que son las algas de la zona. Otro reclamo a la fama es
+                el hecho de que Criccieth ganó el premio *Wales in Bloom*
+                durante cinco años consecutivos por sus espectaculares
+                exhibiciones florales alrededor de la ciudad. También fue el
+                hogar de David Lloyd George, el único galés que ocupó el cargo
+                de Primer Ministro del Reino Unido.
+              </p>
+            </div>
+
             <button class="places__button" type="button">
               Compra esta obra de arte como NFT
             </button>
@@ -290,23 +299,26 @@
             <img class="places__image" src="./images/__USA.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist__name">Travis Turner, autor y editor</p>
-            <p class="places__paragraph">
-              Berea es una pequeña ciudad situada en la parte central de
-              Kentucky. La ciudad está rodeada de hermosos bosques y campos. Es
-              conocida como la capital del arte y la artesanía del estado, y los
-              visitantes encontrarán muchas oportunidades de compra: tiendas con
-              joyas hechas a mano, velas, artículos de madera, galerías,
-              estudios de vidrio y mucho más. La ciudad celebra cada año un
-              festival en el que se festeja el "spoonbread", un plato local
-              hecho con pan de maíz y servido con una cuchara de madera. <br />
-              <br />
-              Sin embargo, es probablemente más conocido por la universidad
-              local Berea College se fundó en 1855 y fue la primera universidad
-              del sur de EE.UU. en estar integrada racialmente, así como la
-              primera en ser coeducativa. De manera singular, no cobra
-              matrícula: todos los estudiantes reciben una beca de matrícula
-              completa.
-            </p>
+            <div class="places__paragraph">
+              <p class="places__paragraph__edit">
+                Berea es una pequeña ciudad situada en la parte central de
+                Kentucky. La ciudad está rodeada de hermosos bosques y campos.
+                Es conocida como la capital del arte y la artesanía del estado,
+                y los visitantes encontrarán muchas oportunidades de compra:
+                tiendas con joyas hechas a mano, velas, artículos de madera,
+                galerías, estudios de vidrio y mucho más. La ciudad celebra cada
+                año un festival en el que se festeja el "spoonbread", un plato
+                local hecho con pan de maíz y servido con una cuchara de madera.
+              </p>
+              <p class="places__paragraph__edit">
+                Sin embargo, es probablemente más conocido por la universidad
+                local Berea College se fundó en 1855 y fue la primera
+                universidad del sur de EE.UU. en estar integrada racialmente,
+                así como la primera en ser coeducativa. De manera singular, no
+                cobra matrícula: todos los estudiantes reciben una beca de
+                matrícula completa.
+              </p>
+            </div>
             <button class="places__button" type="button">
               Compra esta obra de arte como NFT
             </button>
@@ -319,30 +331,35 @@
             <p class="places__artist__name">
               Grevisse Kenguruka, editor técnico
             </p>
-            <p class="places__paragraph">
-              Muramvya es una de las 18 provincias de Burundi. En la época del
-              reino, Muramvya era la capital real y en 2007, por su cultura y
-              paisaje natural, fue incluida en la lista indicativa del
-              Patrimonio Cultural Mundial de la UNESCO. Está situada en el
-              centro de Burundi, entre las capitales política y económica del
-              país. <br />
-              <br />
-              El clima es más bien frío por la noche, pero durante el día,
-              creerás que estás en el paraíso. A 2.665 metros sobre el nivel del
-              mar, el monte Teza es uno de los lugares más fríos de la
-              provincia. Pero esa brisa fresca permite el crecimiento de una de
-              las mayores plantaciones de té y café del país, que constituyen la
-              mayor parte de las exportaciones de Burundi.
-              <br />
-              <br />
-              El Parque Nacional de Kibira, una de las mayores reservas de fauna
-              silvestre para simios, se extiende por cuatro provincias, incluida
-              Muramvya. Este Parque Nacional se encuentra en el vértice de las
-              hermosas montañas de la divisoria Congo-Nilo, que oscilan entre
-              los 1.550 y los 2.660 metros de altitud. Está lleno de hermosa
-              vegetación, y es una fuente para los diversos ríos y arroyos que
-              proporcionan agua en todo el país
-            </p>
+            <div class="places__paragraph">
+              <p class="places__paragraph__edit">
+                Muramvya es una de las 18 provincias de Burundi. En la época del
+                reino, Muramvya era la capital real y en 2007, por su cultura y
+                paisaje natural, fue incluida en la lista indicativa del
+                Patrimonio Cultural Mundial de la UNESCO. Está situada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+
+              <p class="places__paragraph__edit">
+                El clima es más bien frío por la noche, pero durante el día,
+                creerás que estás en el paraíso. A 2.665 metros sobre el nivel
+                del mar, el monte Teza es uno de los lugares más fríos de la
+                provincia. Pero esa brisa fresca permite el crecimiento de una
+                de las mayores plantaciones de té y café del país, que
+                constituyen la mayor parte de las exportaciones de Burundi.
+              </p>
+
+              <p class="places__paragraph__edit">
+                El Parque Nacional de Kibira, una de las mayores reservas de
+                fauna silvestre para simios, se extiende por cuatro provincias,
+                incluida Muramvya. Este Parque Nacional se encuentra en el
+                vértice de las hermosas montañas de la divisoria Congo-Nilo, que
+                oscilan entre los 1.550 y los 2.660 metros de altitud. Está
+                lleno de hermosa vegetación, y es una fuente para los diversos
+                ríos y arroyos que proporcionan agua en todo el país
+              </p>
+            </div>
             <button
               class="places__button places__button__burundi"
               type="button"
@@ -356,18 +373,21 @@
             <img class="places__image" src="./images/SIMITI.jpeg" alt="" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist__name">Nicolle Algarín</p>
-            <p class="places__paragraph">
-              Simití es un pequeño municipio ubicado en el departamento de
-              Bolívar, región costera de Colombia es mucho más antiguo que la
-              capital pero ha sido golpeado por la injusticia y parte de la
-              historia de guerra del país, sin embargo, es un lugar muy
-              tranquilo, una península rodeada de 3 islas.
-              <br />
-              <br />
-              Allí se puede hacer avistamiento de aves, bañarse en la ciénaga
-              que la rodea y pasar un rato muy agradable en familia caminando
-              por sus calles y disfrutando de su cálida y fiestera cultura
-            </p>
+            <div class="places__paragraph">
+              <p class="places__paragraph__edit">
+                Simití es un pequeño municipio ubicado en el departamento de
+                Bolívar, región costera de Colombia es mucho más antiguo que la
+                capital pero ha sido golpeado por la injusticia y parte de la
+                historia de guerra del país, sin embargo, es un lugar muy
+                tranquilo, una península rodeada de 3 islas.
+              </p>
+
+              <p class="places__paragraph__edit">
+                Allí se puede hacer avistamiento de aves, bañarse en la ciénaga
+                que la rodea y pasar un rato muy agradable en familia caminando
+                por sus calles y disfrutando de su cálida y fiestera cultura
+              </p>
+            </div>
             <button class="places__button" type="button">
               Compra esta obra de arte como NFT
             </button>
@@ -378,10 +398,12 @@
           <img class="cover__image" src="./images/Paisaje.jpg" alt="" />
           <div class="cover__content">
             <p class="cover__title">Visítanos</p>
-            <p class="cover__paragraph">
-              Todo el año <br />Galería de Arte de Practicum <br />404, Avenida
-              Tim Berners-Lee.
-            </p>
+            <div class="cover__paragraph">
+              <p class="cover__paragraph__edit">Todo el año</p>
+              <p class="cover__paragraph__edit">Galería de Arte de Practicum</p>
+              <p class="cover__paragraph__edit">404, Avenida</p>
+              <p class="cover__paragraph__edit">Tim Berners-Lee.</p>
+            </div>
             <button class="cover__button" type="button">
               Comprar entradas
             </button>
