--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
       content="Viaje, Ucrania, Gales, Estados Unidos, Burundi, NFT"
     />
     <meta name="author" content="Nicolle Algarin" />
-    <!-- <meta name="description" content=""> -->
     <title>De patria a patria</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body class="body">
@@ -170,8 +163,7 @@
       <main class="content">
         <section class="lead">
           <h1 class="lead__title">
-            De patria a <br />
-            patria
+            De patria a <br/>patria           
           </h1>
           <p class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -260,10 +252,13 @@
             <p class="places__title">Criccieth, Gales</p>
             <img class="places__image" src="./images/Gales.jpg" alt="" />
             <p class="places__artist">ARTISTAS</p>
-            <p class="places__artist__name">
-              Steffan Warren, editor principal <br />Kseniya Glagoleva,
-              directora del proyecto
-            </p>
+            <div class="places__artist__name">
+                <p class="places__artist__name__edit"> 
+                Steffan Warren, editor principal </p>
+                <p class="places__artist__name__edit2"> 
+                Kseniya Glagoleva,directora del proyecto
+                </p>
+            </div>
             <div class="places__paragraph">
               <p class="places__paragraph__edit">
                 La ruina medieval del castillo de Criccieth domina la ciudad
@@ -293,7 +288,7 @@
 
           <div class="places__item">
             <p class="places__title places__title__USA">
-              Berea, Estados <br />
+              Berea, Estados <br/>
               Unidos
             </p>
             <img class="places__image" src="./images/__USA.jpg" alt="" />
