--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
       <main class="content">
         <section class="lead">
           <h1 class="lead__title">
-            De patria a <br/>patria           
+            De patria a 
+            <br/>patria           
           </h1>
           <p class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -287,10 +288,10 @@
           </div>
 
           <div class="places__item">
-            <p class="places__title places__title__USA">
-              Berea, Estados <br/>
-              Unidos
-            </p>
+            <div class="places__title places__title__USA">
+              <p class="places__title__USA__edit">Berea, Estados</p>
+              <p class="places__title__USA__edit">Unidos</p>
+            </div>
             <img class="places__image" src="./images/__USA.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist__name">Travis Turner, autor y editor</p>
