--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 
       <main class="content">
         <section class="lead">
-          <h1 class="lead__title">
-            De patria a 
-            <br/>patria           
-          </h1>
+          <div class="lead__title">
+            <p class="lead__title__edit">De patria a</p>  
+            <p class="lead__title__edit">patria</p>           
+          </div>
           <p class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
           </p>
