--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
     <div class="page">
       <header class="header">
         <div class="header__logo">
-          <div class="header__vectors">
+          <div class="header__logo-vectors">
             <img
-              class="header__icon"
+              class="header__logo-icon"
               src="./images/Vector.svg"
               alt="cuadro azul redondeado"
             />
             <img
-              class="header__icon__line__horizontal"
+              class="header__logo-line header__logo-line--horizontal"
               src="./images/Vector-horizontal.svg"
               alt="linea horizontal del icono"
             />
 
             <img
-              class="header__icon__line__vertical"
+              class="header__logo-line header__logo-line--vertical"
               src="./images/Vector-vertical.svg"
               alt="linea vertical del icono"
             />
           </div>
 
           <div class="header__letras">
-            <div class="header__letras__practicum">
+            <div class="header__letras--practicum">
               <img
                 src="./images/letra-P.svg"
                 alt=""
@@ -84,7 +84,7 @@
               />
             </div>
 
-            <div class="header__letras__art">
+            <div class="header__letras-art">
               <img
                 src="./images/letra-A.svg"
                 alt=""
@@ -101,7 +101,7 @@
               />
             </div>
 
-            <div class="header__letras__gallery">
+            <div class="header__letras-gallery">
               <img
                 src="./images/letra-G.svg"
                 alt=""
@@ -144,8 +144,8 @@
       <main class="content">
         <section class="lead">
           <div class="lead__title">
-            <p class="lead__title__edit">De patria a</p>  
-            <p class="lead__title__edit">patria</p>           
+            <p>De patria a</p>  
+            <p>patria</p>           
           </div>
           <p class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -393,4 +393,7 @@
       </footer>
     </div>
   </body>
-</html>
+</html> 
+
+
+  
