--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       <main class="content">
         <section class="lead">
           <div class="lead__title">
-            <p>De patria a</p>  
-            <p>patria</p>           
+            <p class="lead__title">De patria a</p>  
+            <p class="lead__title">patria</p>           
           </div>
           <p class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
