BEM fixed in Places

--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
             línea
           </p>
           <div class="intro__quote">
-            <p class="intro__quote__paragraph">
+            <p class="intro__quote-paragraph">
               Todo ser humano es un artista, un ser de la libertad, llamado a
               participar en la transformación y reforma de las condiciones, el
               pensamiento y las estructuras que conforman e influyen en nuestras
               vidas.
             </p>
-            <p class="intro__quote__autor">— Joseph Beuys</p>
+            <p class="intro__quote-autor">— Joseph Beuys</p>
           </div>
           <p class="intro__paragraph">
             La ciudad de Practicum ha reunido a profesionales de diferentes
@@ -200,11 +200,11 @@
             <p class="places__title">Kiev, Ucrania</p>
             <img class="places__image" src="./images/Ucrania.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
-            <p class="places__artist__name">
+            <p class="places__artist-name">
               Natalia Dolgushina, productora de contenidos
             </p>
             <div class="places__paragraph">
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada
                 a orillas del río Dniéper. Por supuesto, nadie en su sano juicio
                 se bañaría en el río, a menos que se haya criado aquí, en cuyo
@@ -214,7 +214,7 @@
                 absolutamente increíbles.
               </p>
 
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 La ciudad en sí es una mezcla de arquitectura
                 prerrevolucionaria, de posguerra y soviética, toda ella
                 salpicada de balcones modificados. Si te encuentras en la orilla
@@ -234,15 +234,15 @@
             <p class="places__title">Criccieth, Gales</p>
             <img class="places__image" src="./images/Gales.jpg" alt="" />
             <p class="places__artist">ARTISTAS</p>
-            <div class="places__artist__name">
-                <p class="places__artist__name__edit"> 
+            <div class="places__artist-name">
+                <p class="places__artist-name__edit"> 
                 Steffan Warren, editor principal </p>
-                <p class="places__artist__name__edit2"> 
+                <p class="places__artist-name__edit2"> 
                 Kseniya Glagoleva,directora del proyecto
                 </p>
             </div>
             <div class="places__paragraph">
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 La ruina medieval del castillo de Criccieth domina la ciudad
                 desde una roca que se adentra en el mar. Se cree que fue
                 construido por Llewelyn el Grande en el siglo XIII. Unos 900
@@ -251,7 +251,7 @@
                 durante los meses de verano.
               </p>
 
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 A poca distancia del castillo, se puede disfrutar del mejor
                 helado del mundo en Cadwalader's, cuyo ingrediente secreto se
                 rumorea que son las algas de la zona. Otro reclamo a la fama es
@@ -269,15 +269,15 @@
           </div>
 
           <div class="places__item">
-            <div class="places__title places__title__USA">
-              <p class="places__title__USA__edit">Berea, Estados</p>
-              <p class="places__title__USA__edit">Unidos</p>
+            <div class="places__title places__title-USA">
+              <p class="places__title-USA__edit">Berea, Estados</p>
+              <p class="places__title-USA__edit">Unidos</p>
             </div>
             <img class="places__image" src="./images/__USA.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
-            <p class="places__artist__name">Travis Turner, autor y editor</p>
+            <p class="places__artist-name">Travis Turner, autor y editor</p>
             <div class="places__paragraph">
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Berea es una pequeña ciudad situada en la parte central de
                 Kentucky. La ciudad está rodeada de hermosos bosques y campos.
                 Es conocida como la capital del arte y la artesanía del estado,
@@ -287,7 +287,7 @@
                 año un festival en el que se festeja el "spoonbread", un plato
                 local hecho con pan de maíz y servido con una cuchara de madera.
               </p>
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Sin embargo, es probablemente más conocido por la universidad
                 local Berea College se fundó en 1855 y fue la primera
                 universidad del sur de EE.UU. en estar integrada racialmente,
@@ -305,11 +305,11 @@
             <p class="places__title">Muramvya, Burundi</p>
             <img class="places__image" src="./images/Burundi.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
-            <p class="places__artist__name">
+            <p class="places__artist-name">
               Grevisse Kenguruka, editor técnico
             </p>
             <div class="places__paragraph">
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Muramvya es una de las 18 provincias de Burundi. En la época del
                 reino, Muramvya era la capital real y en 2007, por su cultura y
                 paisaje natural, fue incluida en la lista indicativa del
@@ -318,7 +318,7 @@
                 país.
               </p>
 
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 El clima es más bien frío por la noche, pero durante el día,
                 creerás que estás en el paraíso. A 2.665 metros sobre el nivel
                 del mar, el monte Teza es uno de los lugares más fríos de la
@@ -327,7 +327,7 @@
                 constituyen la mayor parte de las exportaciones de Burundi.
               </p>
 
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 El Parque Nacional de Kibira, una de las mayores reservas de
                 fauna silvestre para simios, se extiende por cuatro provincias,
                 incluida Muramvya. Este Parque Nacional se encuentra en el
@@ -349,9 +349,9 @@
             <p class="places__title">Simití</p>
             <img class="places__image" src="./images/SIMITI.jpeg" alt="" />
             <p class="places__artist">ARTISTA</p>
-            <p class="places__artist__name">Nicolle Algarín</p>
+            <p class="places__artist-name">Nicolle Algarín</p>
             <div class="places__paragraph">
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Simití es un pequeño municipio ubicado en el departamento de
                 Bolívar, región costera de Colombia es mucho más antiguo que la
                 capital pero ha sido golpeado por la injusticia y parte de la
@@ -359,7 +359,7 @@
                 tranquilo, una península rodeada de 3 islas.
               </p>
 
-              <p class="places__paragraph__edit">
+              <p class="places__paragraph-edit">
                 Allí se puede hacer avistamiento de aves, bañarse en la ciénaga
                 que la rodea y pasar un rato muy agradable en familia caminando
                 por sus calles y disfrutando de su cálida y fiestera cultura
@@ -376,10 +376,10 @@
           <div class="cover__content">
             <p class="cover__title">Visítanos</p>
             <div class="cover__paragraph">
-              <p class="cover__paragraph__edit">Todo el año</p>
-              <p class="cover__paragraph__edit">Galería de Arte de Practicum</p>
-              <p class="cover__paragraph__edit">404, Avenida</p>
-              <p class="cover__paragraph__edit">Tim Berners-Lee.</p>
+              <p class="cover__paragraph-edit">Todo el año</p>
+              <p class="cover__paragraph-edit">Galería de Arte de Practicum</p>
+              <p class="cover__paragraph-edit">404, Avenida</p>
+              <p class="cover__paragraph-edit">Tim Berners-Lee.</p>
             </div>
             <button class="cover__button" type="button">
               Comprar entradas
