--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
             <img class="places__image" src="./images/Gales.jpg" alt="" />
             <p class="places__artist">ARTISTAS</p>
             <div class="places__artist-name">
-                <p class="places__artist-name__edit"> 
+                <p class="places__artist-name places__artist-name-edit"> 
                 Steffan Warren, editor principal </p>
-                <p class="places__artist-name__edit2"> 
+                <p class="places__artist-name places__artist-name-edit2"> 
                 Kseniya Glagoleva,directora del proyecto
                 </p>
             </div>
@@ -270,8 +270,8 @@
 
           <div class="places__item">
             <div class="places__title places__title-USA">
-              <p class="places__title-USA__edit">Berea, Estados</p>
-              <p class="places__title-USA__edit">Unidos</p>
+              <p class="places__title-USA-edit">Berea, Estados</p>
+              <p class="places__title-USA-edit">Unidos</p>
             </div>
             <img class="places__image" src="./images/__USA.jpg" alt="" />
             <p class="places__artist">ARTISTA</p>
@@ -338,7 +338,7 @@
               </p>
             </div>
             <button
-              class="places__button places__button__burundi"
+              class="places__button places__button-burundi"
               type="button"
             >
               Compra esta obra de arte como NFT
