--- a/index.html
+++ b/index.html
@@ -16,129 +16,8 @@
   <body class="body">
     <div class="page">
       <header class="header">
-        <div class="header__logo">
-          <div class="header__logo-vectors">
-            <img
-              class="header__logo-icon"
-              src="./images/Vector.svg"
-              alt="cuadro azul redondeado"
-            />
-            <img
-              class="header__logo-line header__logo-line-horizontal"
-              src="./images/Vector-horizontal.svg"
-              alt="linea horizontal del icono"
-            />
-
-            <img
-              class="header__logo-line header__logo-line-vertical"
-              src="./images/Vector-vertical.svg"
-              alt="linea vertical del icono"
-            />
-          </div>
-
-          <div class="header__letras">
-            <div class="header__letras-practicum">
-              <img
-                src="./images/letra-P.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-R.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-A.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-C.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-T.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-I.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-C.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-U.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-M.svg"
-                alt=""
-              />
-            </div>
-
-            <div class="header__letras-art">
-              <img
-                src="./images/letra-A.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-R.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-T.svg"
-                alt=""
-              />
-            </div>
-
-            <div class="header__letras-gallery">
-              <img
-                src="./images/letra-G.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-A.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-L.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-L.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-E.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-R.svg"
-                alt=""
-              />
-
-              <img
-                src="./images/letra-Y.svg"
-                alt=""
-              />
-            </div>
-          </div>
-        </div>
+        
+          <img class="header__logo" src="./images/logo.png" alt="logo practicum art gallery">
       </header>
 
       <main class="content">
@@ -185,14 +64,14 @@
         </section>
 
         <section class="photo-grid">
-          <img class="photo-grid__item" src="./images/__item-1.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-2.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-3.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-4.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-8.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-7.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-6.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/__item-5.jpg" alt="" />
+          <img class="photo-grid__item" src="./images/ciudad-vista-panoramica.jpg" alt="foto de la vista panorámica de una ciudad" />
+          <img class="photo-grid__item" src="./images/Criccieth.jpg" alt="foto de Criccieth, Gales" />
+          <img class="photo-grid__item" src="./images/atardecer.jpg" alt="un atardecer en una ciudad" />
+          <img class="photo-grid__item" src="./images/kiev.jpg" alt="foto panorámica de Kiev, Ucrania" />
+          <img class="photo-grid__item" src="./images/casas.jpg" alt="casas en un lugar remoto" />
+          <img class="photo-grid__item" src="./images/hombre-casa-triangular.jpg" alt="hombre en una casa triangular antigua" />
+          <img class="photo-grid__item" src="./images/letreros.jpg" alt="" />
+          <img class="photo-grid__item" src="./images/paisaje-verde.jpg" alt="paisaje-verde" />
         </section>
 
         <section class="places">
@@ -226,7 +105,7 @@
               </p>
             </div>
             <button class="places__button" type="button">
-              Compra esta obra de arte como NFT
+              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>              
             </button>
           </div>
 
@@ -264,7 +143,7 @@
             </div>
 
             <button class="places__button" type="button">
-              Compra esta obra de arte como NFT
+              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
             </button>
           </div>
 
@@ -297,7 +176,7 @@
               </p>
             </div>
             <button class="places__button" type="button">
-              Compra esta obra de arte como NFT
+              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
             </button>
           </div>
 
@@ -338,16 +217,14 @@
               </p>
             </div>
             <button
-              class="places__button places__button-burundi"
-              type="button"
-            >
-              Compra esta obra de arte como NFT
+              class="places__button places__button-burundi" type="button">
+            <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
             </button>
           </div>
 
           <div class="places__item">
             <p class="places__title">Simití</p>
-            <img class="places__image" src="./images/SIMITI.jpeg" alt="" />
+            <img class="places__image" src="./images/SIMITI.jpeg" alt="una foto de la naturaleza de Simiti, Colombia" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist-name">Nicolle Algarín</p>
             <div class="places__paragraph">
@@ -366,13 +243,13 @@
               </p>
             </div>
             <button class="places__button" type="button">
-              Compra esta obra de arte como NFT
+              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
             </button>
           </div>
         </section>
 
         <section class="cover">
-          <img class="cover__image" src="./images/Paisaje.jpg" alt="" />
+          <img class="cover__image" src="./images/Paisaje.jpg" alt="Paisaje con mucho pasto y unas casa al fondo" />
           <div class="cover__content">
             <p class="cover__title">Visítanos</p>
             <div class="cover__paragraph">
@@ -382,7 +259,7 @@
               <p class="cover__paragraph-edit">Tim Berners-Lee.</p>
             </div>
             <button class="cover__button" type="button">
-              Comprar entradas
+              <a class="cover__button-link" href="">Comprar entradas</a>            
             </button>
           </div>
         </section>
